@startuml
' Título del Diagrama
title Diagrama de Clases - Plataforma "XHION Core"

' Estilo del Diagrama
skinparam class {
    BackgroundColor #FEFECE
    BorderColor #A80036
    ArrowColor #A80036
}
hide empty members
left to right direction

' --- ENUMS (Tipos de datos definidos) ---
enum estadoUsuario {
    INVITADO
    ACTIVO
    INACTIVO
    SUSPENDIDO
    BLOQUEADO
    ELIMINADO
}
enum EstadoProyecto {
  Activo
  Completado
  En_Pausa
  Archivado
}

enum EstadoTarea {
  Por_Hacer
  En_Progreso
  Hecho
  Bloqueado
}

enum tipoContacto{
    telefono_principal
    telefono_secundario
    email_personal
}

enum NivelHabilidad {
    BASICO
    INTERMEDIO
    AVANZADO
}

enum PeriodoClasificacion {
    DIARIO
    SEMANAL
    MENSUAL
    ANUAL
}

' --- PAQUETE: NÚCLEO Y USUARIOS ---
package "Modulo: Nucleo y Usuarios" <<Folder>> {
    
    class Usuario {
        - id: UUID
        - nombreCompleto: string
        - email: string
        - passwordHash: string
        --
        + registrarUsuario(datos): Usuario
        + verificarPassword(pass): boolean
        + actualizarPerfil(nuevosDatos): void
        + obtenerDashboard(): DashboardUsuario
    }

    class Rol {
        - id: UUID
        - nombre: string
        --
        + tienePermiso(accion: string): boolean
    }

    class Permiso {
        - id: UUID
        - nombreAccion: string
        - descripcion: string
    }

    class PuestoTrabajo {
        - id: UUID
        - titulo: string
        - descripcion: string
    }

    class Habilidad {
        - id: UUID
        - nombre: string
        - categoria: CategoriaHabilidad
    }
}

' --- PAQUETE: GESTIÓN DE PROYECTOS ---
package "Modulo: Gestion de Proyectos" <<Folder>> {
    
    class Proyecto {
        - id: UUID
        - nombre: string
        - descripcion: string
        - estado: EstadoProyecto
        --
        + agregarTarea(datosTarea): Tarea
        + obtenerTareas(): Tarea[]
        + calcularProgreso(): float
        + archivarProyecto(): void
    }

    class Tarea {
        - id: UUID
        - titulo: string
        - descripcion: string
        - estado: EstadoTarea
        - fechaVencimiento: Date
        --
        + cambiarEstado(nuevoEstado): void
        + asignarUsuario(usuario: Usuario): void
        + agregarComentario(texto, autor): Comentario
        + estaAtrasada(): boolean
    }

    class Comentario {
        - id: UUID
        - contenido: string
        - fechaCreacion: Date
    }

    class Archivo {
        - id: UUID
        - nombreArchivo: string
        - urlArchivo: string
        - tipoArchivo: string
    }
}

' --- PAQUETE: GAMIFICACIÓN ---
package "Modulo: Gamificacion" <<Folder>> {
    
    class Logro {
        - id: UUID
        - nombre: string
        - descripcion: string
        - accionDisparador: string
    }
    
    class Clasificacion {
        - id: UUID
        - nombre: string
        - periodo: PeriodoClasificacion
        --
        + calcularPosiciones(): void
    }
    
    class EntradaClasificacion {
        - puntaje: int
        - posicion: int
    }
}


' --- PAQUETE: SERVICIOS Y CONTROLADORES (Reflejo de Nest.js) ---
package "Modulo: Capa de Servicios y API (Backend)" <<Node>> {

    class AuthController <<Controller>> {
        + registrar(dto): Promise<User>
        + login(dto): Promise<{accessToken}>
    }
    
    class AuthService <<Service>> {
        - jwtService: JwtService
        - usuarioService: UsuarioService
        --
        + validarUsuario(email, pass): Promise<User>
        + generarToken(user): string
    }
    
    class ProyectoController <<Controller>> {
        - proyectoService: ProyectoService

        --
        + crearProyecto(dto, user): Promise<Proyecto>
        + obtenerProyectos(user): Promise<Proyecto[]>
        + generarProyectoConIA(dto, user): Promise<Proyecto>
    }
    
    class ProyectoService <<Service>> {
        - iaService: IAService
        --
        + crearDesdePlantillaIA(plantillaId, datos): Proyecto
        + calcularEstadisticas(proyectoId): object
    }
    
    class IAService <<Service>> {
        - geminiClient: GeminiClient
        --
        + generarEstructuraProyecto(prompt): Promise<JSON>
        + resumirTexto(texto): Promise<string>
        + sugerirHabilidades(usuarioId): Promise<Habilidad[]>
    }
}


' --- RELACIONES PRINCIPALES ---

' --- Relaciones de Composición (fuerte, el hijo no existe sin el padre) ---
Proyecto "1" o-- "0..*" Tarea : contiene >
Tarea "1" o-- "0..*" Comentario : contiene >

' --- Relaciones de Agregación (débil, el hijo puede existir sin el padre) ---
Departamento "1" o-- "0..*" PuestoTrabajo : define >

' --- Relaciones de Asociación ---
Usuario "1" -- "1" Rol : tiene
Rol "1" -- "0..*" Permiso : tiene
Usuario "1" -- "1" PuestoTrabajo : ocupa
Usuario "1" -- "0..1" Usuario : "supervisa >" ' Relación de supervisión

Usuario "1" -- "0..*" Proyecto : "es responsable de >"
Proyecto "1" -- "1" Departamento : pertenece
Usuario "1" -- "0..*" Tarea : "es asignado a >"
Usuario "1" -- "0..*" Tarea : "crea >"
Usuario "1" -- "0..*" Comentario : "escribe >"

' Relación de Archivos (Polimórfica, no se dibuja fácilmente en UML de clases, se representa con asociación)
Archivo "0..*" -- "1" Tarea : "adjunto en"
Archivo "0..*" -- "1" Proyecto : "adjunto en"

' Relaciones de Habilidades
Usuario "1" -- "0..*" usuario_habilidades
Habilidad "1" -- "0..*" usuario_habilidades
class usuario_habilidades <<Association>> {
    - nivel: NivelHabilidad
}

' Relaciones de Gamificación
Usuario "1" -- "0..*" usuario_logros
Logro "1" -- "0..*" usuario_logros
class usuario_logros <<Association>> {
    - fechaDesbloqueo: Date
}
Usuario "1" -- "1" EntradaClasificacion : tiene
Clasificacion "1" -- "0..*" EntradaClasificacion : contiene

' --- RELACIONES EN LA CAPA DE SERVICIO ---
AuthController ..> AuthService : utiliza
AuthService ..> UsuarioService : utiliza

ProyectoController ..> ProyectoService : utiliza
ProyectoService ..> IAService : utiliza

' Conexión de las entidades con los servicios
ProyectoService ..> Proyecto : gestiona
AuthService ..> Usuario : gestiona

@enduml